comment機能を実装
