# docs/swagger/techbranch.swagger.json
@@ -16,6 +16,9 @@
       "name": "BookmarkService"
     },
     {
+      "name": "CommentService"
+    },
+    {
       "name": "UserService"
     }
   ],
@@ -227,6 +230,70 @@
         ]
       }
     },
+    "/v1/articles/{articleId}/comments": {
+      "get": {
+        "summary": "Get comments by article ID",
+        "description": "Use this API to get comments by article ID",
+        "operationId": "CommentService_ListCommentsByArticleID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoListCommentsByArticleIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "articleId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      },
+      "delete": {
+        "summary": "Delete comment by article ID",
+        "description": "Use this API to delete comment by article ID",
+        "operationId": "CommentService_DeleteCommentByArticleID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoDeleteCommentByArticleIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "articleId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      }
+    },
     "/v1/articles/{id}": {
       "get": {
         "summary": "Get article",
@@ -322,6 +389,73 @@
         ],
         "tags": [
           "BookmarkService"
+        ]
+      }
+    },
+    "/v1/comments": {
+      "post": {
+        "summary": "Create new comment",
+        "description": "Use this API to create new comment",
+        "operationId": "CommentService_CreateComment",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoCreateCommentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoCreateCommentRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      }
+    },
+    "/v1/comments/{id}": {
+      "delete": {
+        "summary": "Delete comment",
+        "description": "Use this API to delete comment",
+        "operationId": "CommentService_DeleteComment",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoDeleteCommentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CommentService"
         ]
       }
     },
@@ -565,6 +699,46 @@
         ]
       }
     },
+    "/v1/users/{userId}/articles/{articleId}/comments": {
+      "delete": {
+        "summary": "Delete comment by user ID and article ID",
+        "description": "Use this API to delete comment by user ID and article ID",
+        "operationId": "CommentService_DeleteCommentByUserIDAndArticleID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoDeleteCommentByUserIDAndArticleIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "articleId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      }
+    },
     "/v1/users/{userId}/bookmarks": {
       "get": {
         "summary": "Get bookmarks by user ID",
@@ -628,6 +802,70 @@
           "BookmarkService"
         ]
       }
+    },
+    "/v1/users/{userId}/comments": {
+      "get": {
+        "summary": "Get comments by user ID",
+        "description": "Use this API to get comments by user ID",
+        "operationId": "CommentService_ListCommentsByUserID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoListCommentsByUserIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      },
+      "delete": {
+        "summary": "Delete comment by user ID",
+        "description": "Use this API to delete comment by user ID",
+        "operationId": "CommentService_DeleteCommentByUserID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoDeleteCommentByUserIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "CommentService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -682,6 +920,34 @@
         }
       }
     },
+    "protoComment": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "userId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "articleId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "content": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "protoCreateArticleRequest": {
       "type": "object",
       "properties": {
@@ -725,6 +991,30 @@
         }
       }
     },
+    "protoCreateCommentRequest": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "articleId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "content": {
+          "type": "string"
+        }
+      }
+    },
+    "protoCreateCommentResponse": {
+      "type": "object",
+      "properties": {
+        "comment": {
+          "$ref": "#/definitions/protoComment"
+        }
+      }
+    },
     "protoCreateUserRequest": {
       "type": "object",
       "properties": {
@@ -757,6 +1047,18 @@
       "type": "object"
     },
     "protoDeleteBookmarkByUserIDResponse": {
+      "type": "object"
+    },
+    "protoDeleteCommentByArticleIDResponse": {
+      "type": "object"
+    },
+    "protoDeleteCommentByUserIDAndArticleIDResponse": {
+      "type": "object"
+    },
+    "protoDeleteCommentByUserIDResponse": {
+      "type": "object"
+    },
+    "protoDeleteCommentResponse": {
       "type": "object"
     },
     "protoDeleteUserResponse": {
@@ -827,6 +1129,30 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/protoBookmark"
+          }
+        }
+      }
+    },
+    "protoListCommentsByArticleIDResponse": {
+      "type": "object",
+      "properties": {
+        "comments": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoComment"
+          }
+        }
+      }
+    },
+    "protoListCommentsByUserIDResponse": {
+      "type": "object",
+      "properties": {
+        "comments": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoComment"
           }
         }
       }
